crates/rd2qmd-cli/tests/snapshots/describe_format__describe_definition_list_md.snap
---
source: crates/rd2qmd-cli/tests/describe_format.rs
expression: output
---
# Describe Blocks With Roxygen Code Fences

## Description

Demonstrates the Pandoc definition-list writer's handling of multi-line block children -- roxygen2 fenced code blocks, a nested definition list, and a bulleted list item that itself contains a fenced code block -- inside definition-list item descriptions. Rd authors reach this layout by embedding raw markup in a free-text roxygen2 field, as ggplot2 does when documenting its extensible base classes.

## Methods

`compute()`
:   **Usage**

    ```r
    compute(a, b)
    compute(a, b, extra = TRUE)
    combine(a, b)
    ```

    **Arguments**

    `a`
    :   The first value.

    `b`
    :   The second value.


    **Examples**

    - Basic usage:

      ```
      compute(1, 2)
      #> [1] 3
      ```
    - Advanced usage returns invisibly.

    **Ordered examples**

    1. Basic usage:

       ```
       compute(1, 2)
       #> [1] 3
       ```
    2. Advanced usage returns invisibly.

    That covers the `compute()` method.
