crates/rd2qmd-cli/tests/snapshots/describe_format__describe_headings_argument_pipe_table.snap
---
source: crates/rd2qmd-cli/tests/describe_format.rs
expression: output
---
# Formats

## Description

### outside

Outside body.

## Arguments

| Argument | Description |
|:---|:---|
| `x` | - **[term](https://example.com)** <br>First paragraph. <br>Second paragraph. <br>- **nested** <br>Nested body. <br>`x \| y` |
