crates/rd2qmd-cli/tests/snapshots/describe_format__describe_headings_section_depth.snap
---
source: crates/rd2qmd-cli/tests/describe_format.rs
expression: output
---
# Headings

## Details

### detail

Detail body.

## Methods

### `method()`

Method body.

#### [argument](https://example.com)

Argument body.

```
method(x)
```

### second

Second body.

### Advanced

#### option

Option body.
